# its-raining-men

./: Cargo.toml  Readme.md
assets/: registry.json
assets/models/men/: peasant-man.glb
assets/models/other/: airplane.glb  lift.glb
assets/models/scenes/: bench.glb  humidity.glb  lantern.glb  scene0.glb
src/: airplane.rs  animator.rs  camera.rs  camera_target.rs  env.rs  girls.rs  intro.rs  leader.rs  lift.rs  main.rs  men.rs  movement.rs  music.rs  shared.rs
